--- a/src/main/webapp/pages/CompanyUsers/CompanyUsers.html
+++ b/src/main/webapp/pages/CompanyUsers/CompanyUsers.html
@@ -31,7 +31,7 @@
                                     <wm-gridrow name="gridrow4" padding="1em unset">
                                         <wm-gridcolumn columnwidth="4" name="gridcolumn5"></wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="4" name="gridcolumn6"></wm-gridcolumn>
-                                        <wm-gridcolumn columnwidth="4" name="gridcolumn9">
+                                        <wm-gridcolumn columnwidth="4" name="gridcolumn9" horizontalalign="right">
                                             <wm-button class="btn-default btn-primary" caption="Add User" type="button" margin="unset 0.5em" name="buttonAddUser" iconclass="wi wi-person-add" on-click="Widgets.dialogAddUser.open()"></wm-button>
                                             <wm-button class="btn-default btn-warning" caption="Invite User" type="button" margin="unset 0.5em" name="buttonInviteUser" iconclass="wi wi-contact-mail"></wm-button>
                                         </wm-gridcolumn>
@@ -41,8 +41,7 @@
                                             <wm-grid title="VendorUsers List" dataset="bind:Variables.VendorUsers.dataSet" navigation="Classic" name="gridVendorUsers">
                                                 <wm-grid-column binding="id" caption="Id" type="integer" primary-key="true" generator="identity" readonly="true" edit-widget-type="number" show="true"></wm-grid-column>
                                                 <wm-grid-column binding="users.photo" caption="Users Photo" type="blob" widget-type="image" generator="assigned" readonly="true" edit-widget-type="upload" searchable="false" show="true"
-                                                related-entity-name="Users"><img ng-if="columnValue != null" width="48px" class="" data-ng-src="{{contentBaseUrl + row[primaryKey] + '/content/'+ colDef.field}}" alt="{{contentBaseUrl + row[primaryKey] + '/content/'+ colDef.field}}"
-                                                    data-ng-class="">
+                                                related-entity-name="Users"><img ng-if="columnValue != null" width="48px" class="" data-ng-src="services/cx2/Users/" +widgets.gridvendorusers.selecteditem.users.id+ "=" " content=" " photo"="">
                                                 </wm-grid-column>
                                                 <wm-grid-column binding="joiningDate" caption="Joining Date" type="date" generator="assigned" readonly="true" edit-widget-type="date" show="true"></wm-grid-column>
                                                 <wm-grid-column binding="users.email" caption="Users Email" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="Users"></wm-grid-column>
@@ -61,17 +60,23 @@
                                     <wm-gridrow name="gridrow4" padding="1em unset">
                                         <wm-gridcolumn columnwidth="4" name="gridcolumn5"></wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="4" name="gridcolumn6"></wm-gridcolumn>
-                                        <wm-gridcolumn columnwidth="4" name="gridcolumn9" horizontalalign="center">
-                                            <wm-button class="btn-default btn-primary" caption="Add Admin" type="button" margin="unset 0.5em" name="buttonAddAdmin" iconclass="wi wi-person-add" on-click="Widgets.dialogAddUser.open()"></wm-button>
+                                        <wm-gridcolumn columnwidth="4" name="gridcolumn9" horizontalalign="right">
+                                            <wm-button class="btn-default btn-primary" caption="Add Admin" type="button" margin="unset 0.5em" name="buttonAddAdmin" iconclass="wi wi-person-add" on-click="Widgets.dialogAddAdmin.open()"></wm-button>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow5">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn7">
                                             <wm-grid title="VendorAdmins List" dataset="bind:Variables.VendorAdmins.dataSet" navigation="Basic" name="gridAdmins">
-                                                <wm-grid-column binding="id" caption="Id" generator="identity" pcdisplay="true" mobiledisplay="true" type="integer" primary-key="true" readonly="true"></wm-grid-column>
-                                                <wm-grid-column binding="users.photo" widget-type="image" caption="Users Photo" generator="assigned" pcdisplay="true" mobiledisplay="true" type="blob" related-entity-name="Users" readonly="true"><img ng-if="columnValue != null" width="48px" class="" data-ng-src="{{contentBaseUrl + row[primaryKey] + '/content/'+ colDef.field}}">
+                                                <wm-grid-column binding="id" caption="Id" type="integer" primary-key="true" generator="identity" readonly="true" edit-widget-type="number" show="true"></wm-grid-column>
+                                                <wm-grid-column binding="users.photo" caption="Users Photo" type="blob" widget-type="image" generator="assigned" readonly="true" edit-widget-type="upload" searchable="false" show="true"
+                                                related-entity-name="Users"><img ng-if="columnValue != null" width="48px" class="" data-ng-src="services/cx2/Users/" +widgets.gridadmins.selecteditem.users.id+ "=" " content=" " photo"="">
                                                 </wm-grid-column>
-                                                <wm-grid-column binding="users.email" caption="Users Email" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" related-entity-name="Users" readonly="true"></wm-grid-column>
+                                                <wm-grid-column binding="users.email" caption="Users Email" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="Users"></wm-grid-column>
+                                                <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="250px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                                <wm-grid-row-action key="customRow" display-name="View Profile" show="true" class="btn-transparent" iconclass="wi wi-settings" title="Custom rowActions" action="Widgets.dialogAdminProfile.open()"
+                                                disabled="false"></wm-grid-row-action>
+                                                <wm-grid-row-action key="customRow1" display-name="Remove" show="true" class="btn-transparent" iconclass="wi wi-delete" title="Custom rowActions" action="Variables.RemoveCXVendorAdminToUser.invoke();Variables.DeleteFromVendorAdmins.invoke();Variables.VendorAdmins.listRecords();Widgets.dialogAddAdmin.close()"
+                                                disabled="false"></wm-grid-row-action>
                                             </wm-grid>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
@@ -173,6 +178,69 @@
                 <wm-gridrow name="gridrow15">
                     <wm-gridcolumn columnwidth="12" padding="1em unset" name="gridcolumn32">
                         <wm-search dataset="bind:Variables.AllUsers.dataSet" searchkey="email" displaylabel="email" displayimagesrc="photo" datafield="All Fields" name="searchForAdmin"></wm-search>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
+        </wm-dialog>
+    </wm-view>
+    <wm-view class="dialog-view" name="viewAdminProfile">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Admin" iconclass="wi wi-user" name="dialogAdminProfile">
+            <wm-dialogactions name="dialogactions4">
+                <wm-button class="btn-primary" caption="Close" on-click="closeDialog()" name="button9"></wm-button>
+            </wm-dialogactions>
+            <wm-layoutgrid name="layoutgrid4">
+                <wm-gridrow name="gridrow6">
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn10"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="8" name="gridcolumn11" horizontalalign="center">
+                        <wm-picture name="picture1" picturesource="bind:&quot;services/cx2/Users/&quot;+Widgets.gridAdmins.selecteditem.users.id+&quot;/content/photo&quot;" shape="circle" width="100pt" height="100pt"></wm-picture>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn14"></wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow7">
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn12"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="8" name="gridcolumn15" horizontalalign="center">
+                        <wm-label padding="unset 0.5em" name="label8" fontweight="bold" fontsize="20" caption="bind:Widgets.gridAdmins.selecteditem.users.firstName+&quot; &quot;+Widgets.gridAdmins.selecteditem.users.lastName"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn13"></wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow8">
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn16"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="8" name="gridcolumn17" horizontalalign="center">
+                        <wm-label padding="unset 0.5em" name="label9" caption="bind:Widgets.gridAdmins.selecteditem.users.email"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn18"></wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow9">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn19" padding="1em unset 1em 1em">
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" name="label10" fontweight="bold" width="100%" caption="Address1"></wm-label>
+                        <wm-label padding="unset 0.5em" name="label11" caption="bind:Widgets.gridAdmins.selecteditem.users.address1"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn20"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn21" padding="1em unset">
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" name="label12" caption="Address2"></wm-label>
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridAdmins.selecteditem.users.address2" name="label13"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow10">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn22" padding="unset unset 1em 1em">
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="City" name="label14"></wm-label>
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridAdmins.selecteditem.users.city" name="label15"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn23"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn24" padding="unset unset 1em unset">
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="State" name="label16"></wm-label>
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridAdmins.selecteditem.users.city" name="label19"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow11">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn25" padding="unset unset 1em 1em">
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="PostalCode" name="label18"></wm-label>
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridAdmins.selecteditem.users.postalCode" name="label20"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn26"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn27" padding="unset unset 1em unset">
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="PhoneNumber" name="label17"></wm-label>
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridAdmins.selecteditem.users.phoneNumber" name="label21"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
