--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -163,92 +163,75 @@
                                         <wm-layoutgrid columns="3" name="layoutgrid5">
                                             <wm-gridrow name="gridrow19_1">
                                                 <wm-gridcolumn columnwidth="4" name="gridcolumn33_1">
-                                                    <wm-form-field name="status" displayname="Status" required="false" show="true" generator="assigned" primary-key="false" key="status" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
-                                                    widget="text"></wm-form-field>
+                                                    <wm-form-field name="status" displayname="Status" show="true" primary-key="false" generator="assigned" key="status" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                                 </wm-gridcolumn>
                                                 <wm-gridcolumn columnwidth="4" name="gridcolumn34_1">
-                                                    <wm-form-field name="description" displayname="Description" required="false" show="true" generator="assigned" primary-key="false" key="description" type="string" is-related="false" maxchars="255" pc-display="true"
-                                                    mobile-display="true" widget="text"></wm-form-field>
+                                                    <wm-form-field name="description" displayname="Description" show="true" primary-key="false" generator="assigned" key="description" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                                 </wm-gridcolumn>
                                                 <wm-gridcolumn columnwidth="4" name="gridcolumn35_1">
-                                                    <wm-form-field name="writeAccess" displayname="Write Access" required="false" show="true" generator="assigned" primary-key="false" key="writeAccess" type="string" is-related="false" maxchars="255" pc-display="true"
-                                                    mobile-display="true" widget="text"></wm-form-field>
+                                                    <wm-form-field name="writeAccess" displayname="Write Access" show="true" primary-key="false" generator="assigned" key="writeAccess" type="integer" step="0" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                                 </wm-gridcolumn>
                                             </wm-gridrow>
                                             <wm-gridrow name="gridrow20_1">
                                                 <wm-gridcolumn columnwidth="4" name="gridcolumn36_1">
-                                                    <wm-form-field name="processOwners" displayname="Process Owners" required="false" show="true" generator="assigned" primary-key="false" key="processOwners" type="string" is-related="false" maxchars="255"
-                                                    pc-display="true" mobile-display="true" widget="text"></wm-form-field>
+                                                    <wm-form-field name="processOwners" displayname="Process Owners" show="true" primary-key="false" generator="assigned" key="processOwners" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                                 </wm-gridcolumn>
                                                 <wm-gridcolumn columnwidth="4" name="gridcolumn37_1">
-                                                    <wm-form-field name="readAccess" displayname="Read Access" required="false" show="true" generator="assigned" primary-key="false" key="readAccess" type="string" is-related="false" maxchars="255" pc-display="true"
-                                                    mobile-display="true" widget="text"></wm-form-field>
+                                                    <wm-form-field name="readAccess" displayname="Read Access" show="true" primary-key="false" generator="assigned" key="readAccess" type="integer" step="0" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                                 </wm-gridcolumn>
                                                 <wm-gridcolumn columnwidth="4" name="gridcolumn38">
-                                                    <wm-form-field name="allowSharedWithEdits" displayname="Allow Shared With Edits" required="false" show="true" generator="assigned" primary-key="false" key="allowSharedWithEdits" type="boolean" is-related="false"
-                                                    pc-display="true" mobile-display="true" widget="checkbox"></wm-form-field>
+                                                    <wm-form-field name="allowSharedWithEdits" displayname="Allow Shared With Edits" show="true" primary-key="false" generator="assigned" key="allowSharedWithEdits" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
                                                 </wm-gridcolumn>
                                             </wm-gridrow>
                                             <wm-gridrow name="gridrow21">
                                                 <wm-gridcolumn columnwidth="4" name="gridcolumn39_1">
-                                                    <wm-form-field name="emailTextBody" displayname="Email Text Body" required="false" show="true" generator="assigned" primary-key="false" key="emailTextBody" type="string" is-related="false" maxchars="255"
-                                                    pc-display="true" mobile-display="true" widget="text"></wm-form-field>
+                                                    <wm-form-field name="emailTextBody" displayname="Email Text Body" show="true" primary-key="false" generator="assigned" key="emailTextBody" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                                 </wm-gridcolumn>
                                                 <wm-gridcolumn columnwidth="4" name="gridcolumn40">
-                                                    <wm-form-field name="emailSubjectLine" displayname="Email Subject Line" required="false" show="true" generator="assigned" primary-key="false" key="emailSubjectLine" type="string" is-related="false" maxchars="255"
-                                                    pc-display="true" mobile-display="true" widget="text"></wm-form-field>
+                                                    <wm-form-field name="emailSubjectLine" displayname="Email Subject Line" show="true" primary-key="false" generator="assigned" key="emailSubjectLine" type="string" widget="text" maxchars="255" inputtype="text"
+                                                    placeholder="Enter value"></wm-form-field>
                                                 </wm-gridcolumn>
                                                 <wm-gridcolumn columnwidth="4" name="gridcolumn41_1">
-                                                    <wm-form-field name="allowReporting" displayname="Allow Reporting" required="false" show="true" generator="assigned" primary-key="false" key="allowReporting" type="boolean" is-related="false" pc-display="true"
-                                                    mobile-display="true" widget="checkbox"></wm-form-field>
+                                                    <wm-form-field name="allowReporting" displayname="Allow Reporting" show="true" primary-key="false" generator="assigned" key="allowReporting" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
                                                 </wm-gridcolumn>
                                             </wm-gridrow>
                                             <wm-gridrow name="gridrow22_1">
                                                 <wm-gridcolumn columnwidth="4" name="gridcolumn42_1">
-                                                    <wm-form-field name="allowAuthorEdits" displayname="Allow Author Edits" required="false" show="true" generator="assigned" primary-key="false" key="allowAuthorEdits" type="boolean" is-related="false" pc-display="true"
-                                                    mobile-display="true" widget="checkbox"></wm-form-field>
+                                                    <wm-form-field name="allowAuthorEdits" displayname="Allow Author Edits" show="true" primary-key="false" generator="assigned" key="allowAuthorEdits" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
                                                 </wm-gridcolumn>
                                                 <wm-gridcolumn columnwidth="4" name="gridcolumn43_1">
-                                                    <wm-form-field name="allowPayment" displayname="Allow Payment" required="false" show="true" generator="assigned" primary-key="false" key="allowPayment" type="boolean" is-related="false" pc-display="true"
-                                                    mobile-display="true" widget="checkbox"></wm-form-field>
+                                                    <wm-form-field name="allowPayment" displayname="Allow Payment" show="true" primary-key="false" generator="assigned" key="allowPayment" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
                                                 </wm-gridcolumn>
                                                 <wm-gridcolumn columnwidth="4" name="gridcolumn44_1">
-                                                    <wm-form-field name="recalculateAutoFees" displayname="Recalculate Auto Fees" required="false" show="true" generator="assigned" primary-key="false" key="recalculateAutoFees" type="boolean" is-related="false"
-                                                    pc-display="true" mobile-display="true" widget="checkbox"></wm-form-field>
+                                                    <wm-form-field name="recalculateAutoFees" displayname="Recalculate Auto Fees" show="true" primary-key="false" generator="assigned" key="recalculateAutoFees" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
                                                 </wm-gridcolumn>
                                             </wm-gridrow>
                                             <wm-gridrow name="gridrow23_1">
                                                 <wm-gridcolumn columnwidth="4" name="gridcolumn45_1">
-                                                    <wm-form-field name="allowInspections" displayname="Allow Inspections" required="false" show="true" generator="assigned" primary-key="false" key="allowInspections" type="boolean" is-related="false" pc-display="true"
-                                                    mobile-display="true" widget="checkbox"></wm-form-field>
+                                                    <wm-form-field name="allowInspections" displayname="Allow Inspections" show="true" primary-key="false" generator="assigned" key="allowInspections" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
                                                 </wm-gridcolumn>
                                                 <wm-gridcolumn columnwidth="4" name="gridcolumn46">
-                                                    <wm-form-field name="considerClosed" displayname="Consider Closed" required="false" show="true" generator="assigned" primary-key="false" key="considerClosed" type="boolean" is-related="false" pc-display="true"
-                                                    mobile-display="true" widget="checkbox"></wm-form-field>
+                                                    <wm-form-field name="considerClosed" displayname="Consider Closed" show="true" primary-key="false" generator="assigned" key="considerClosed" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
                                                 </wm-gridcolumn>
-                                                <wm-gridcolumn columnwidth="4" name="gridcolumn47"></wm-gridcolumn>
                                             </wm-gridrow>
                                             <wm-gridrow name="gridrow24_1">
                                                 <wm-gridcolumn columnwidth="4" name="gridcolumn48">
-                                                    <wm-form-field name="createAsRecord" displayname="Create As Record" required="false" show="true" generator="assigned" primary-key="false" key="createAsRecord" type="boolean" is-related="false" pc-display="true"
-                                                    mobile-display="true" widget="checkbox"></wm-form-field>
+                                                    <wm-form-field name="createAsRecord" displayname="Create As Record" show="true" primary-key="false" generator="assigned" key="createAsRecord" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
                                                 </wm-gridcolumn>
                                                 <wm-gridcolumn columnwidth="4" name="gridcolumn49">
-                                                    <wm-form-field name="sortOrder" displayname="Sort Order" required="false" show="true" generator="assigned" primary-key="false" key="sortOrder" type="long" is-related="false" step="0" pc-display="true" mobile-display="true"
-                                                    widget="number"></wm-form-field>
+                                                    <wm-form-field name="sortOrder" displayname="Sort Order" show="true" primary-key="false" generator="assigned" key="sortOrder" type="long" step="0" widget="number" inputtype="number" placeholder="Enter value"></wm-form-field>
                                                 </wm-gridcolumn>
-                                                <wm-gridcolumn columnwidth="4" name="gridcolumn50"></wm-gridcolumn>
                                             </wm-gridrow>
                                             <wm-gridrow name="gridrow25">
-                                                <wm-gridcolumn columnwidth="4" name="gridcolumn51"></wm-gridcolumn>
                                                 <wm-gridcolumn columnwidth="4" name="gridcolumn52">
-                                                    <wm-form-field name="formTypes" displayname="Form Types" required="false" show="false" generator="assigned" primary-key="false" key="formTypes" type="list" is-related="true" pc-display="true" mobile-display="true"
-                                                    widget="select" defaultvalue="bind:Variables.CurrentFormObj.firstRecord"></wm-form-field>
+                                                    <wm-form-field name="report" displayname="Report" show="true" primary-key="false" generator="assigned" key="report" type="string" widget="text" maxchars="255"></wm-form-field>
                                                 </wm-gridcolumn>
                                             </wm-gridrow>
                                         </wm-layoutgrid>
-                                        <wm-form-action key="cancel" class="form-cancel btn-secondary" iconclass="wi wi-cancel" action="cancel()" display-name="Cancel" show="true" type="button" update-mode="true"></wm-form-action>
-                                        <wm-form-action key="save" class="form-save btn-success" iconclass="wi wi-save" display-name="Save" show="true" type="submit" update-mode="true"></wm-form-action>
+                                        <wm-form-field name="formTypes" displayname="Form Types" show="false" primary-key="false" generator="assigned" key="formTypes" type="list" is-related="true" widget="select" defaultvalue="bind:Variables.CurrentFormObj.firstRecord"
+                                        placeholder="Select value"></wm-form-field>
+                                        <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
+                                        <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-success" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
                                     </wm-liveform>
                                 </wm-livegrid>
                             </wm-accordionpane>
